# personality-prediction

./: .gitignore  LICENSE.md  LM_extractor.py  README.md  data_utils.py  essays_extractor.py  finetuneNet.py  meta_features_extractor.py  process_data.py  pyproject.toml  requirements.txt  submit_job.sbatch  tmp.out  unseen_predictor.py  utils.py
SHAP/: visualization.py
data/essays/: author_id_order.csv  fig1_creator.py
data/essays/psycholinguist_features/: essays_hourglass.csv  essays_mairesse_labeled.csv  essays_nrc.csv  essays_nrc_vad.csv  essays_readability.csv  mairesse_attributes.csv  mairesse_processor.py
data/essays/psycholinguist_features/meta_features_data/: NRC-Emotion-Lexicon.xlsx
data/kaggle/psycholinguist_features/: kaggle_nrc.csv  kaggle_nrc_vad.csv
data/nrc_lexicon/: NRC-VAD-Lexicon.txt
data/pandora/: author_100recent.py
finetune_models/: CNN.py  LR.py  LR_tf.py  MLP.py  MLP_LM.py  MLP_combined_features.py  MLP_lm.py  MLP_other_features.py  MLP_psycho_features.py  SVM.py  SVM_LM.py  SVM_combined_features.py  SVM_psycho_features.py
psycholinguistic_extractors/: NRC_features_extractor.py  NRC_vad_features_extractor.py  affectivespace_features_extractor.py  hourglass_features_extractor.py  mairesse_processor.py  meta_features_extractor.py  readability_features_extractor.py
utils/: author_100recent.py  data_utils.py  dataset_processors.py  gen_utils.py  linguistic_features_utils.py  predictor.py  train_helper.py
