[tool.poetry]
name = "personality-prediction"
version = "0.1.0"
description = "Automated personality prediction with large language models"
authors = ["Yash Mehta <yashsmehta95@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9, <3.12"
tensorflow-cpu = "^2.13.0"
tweet-preprocessor = "^0.6.0"
sentencepiece = "^0.1.99"
numpy = "^1.22"
scikit-learn = "^1.3.0"
readability = "^0.3.1"
pandas = "^2.0.3"
transformers = {extras = ["torch"], version = "^4.31.0"}
xformers = "^0.0.20"
torch = {version = "^2.0.1+cu118", source = "pytorch-gpu-src"}
torchvision = {version = "^0.15.2+cu118", source = "pytorch-gpu-src"}
torchaudio = {version = "^2.0.2+cu118", source = "pytorch-gpu-src"}


[[tool.poetry.source]]
name = "pytorch-gpu-src"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
